# BodyPaint

./: CMakeLists.txt  Development.md  Proposal.md  README.md  addons.make
final-project-susielau.xcodeproj/: project.pbxproj
final-project-susielau.xcodeproj/project.xcworkspace/xcuserdata/SUE.xcuserdatad/: UserInterfaceState.xcuserstate
final-project-susielau.xcodeproj/xcshareddata/xcschemes/: final-project-susielau Debug.xcscheme  final-project-susielau Release.xcscheme
final-project-susielau.xcodeproj/xcuserdata/SUE.xcuserdatad/xcschemes/: xcschememanagement.plist
project/: main.cpp
src/: Board.cpp  Board.h  ofApp.cpp  ofApp.h
